tests/type-check/bad/tuple-is-not-num.arr
x = {1;2}
y :: Number = x
